feat: add admin studio CRUD
